[project]
name = "bilibili-image-clipper"
version = "0.1.0"
description = "Clip images from clipboard to 169x169 and generate names using Ollama"
readme = "README.md"
authors = [
    { name = "fufu", email = "fufurobot@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pillow>=10.0.0",
    "pyperclip>=1.8.2",
    "requests>=2.31.0"
]

[project.scripts]
bilibili-clip = "src:main"

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]